--- a/styles/main.css
+++ b/styles/main.css
@@ -1,6 +1,6 @@
 @font-face {
   font-family: "Outfit";
-  src: url("/assets/fonts/outfit/Outfit-VariableFont_wght.ttf")
+  src: url("../assets/fonts/outfit/Outfit-VariableFont_wght.ttf")
     format("truetype");
   font-weight: 100 900;
   font-style: normal;
@@ -8,12 +8,13 @@
 }
 @font-face {
   font-family: "Young Serif";
-  src: url("/assets/fonts/young-serif/YoungSerif-Regular.ttf")
+  src: url("../assets/fonts/young-serif/YoungSerif-Regular.ttf")
     format("truetype");
   font-weight: 400;
   font-style: normal;
   font-display: swap;
 }
+
 *,
 *::before,
 *::after {
